--- a/.env.example
+++ b/.env.example
@@ -47,14 +47,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+# SMTP2GO Email Configuration
+MAIL_MAILER=smtp2go
+SMTP2GO_HOST=mail.smtp2go.com
+SMTP2GO_PORT=2525
+SMTP2GO_USERNAME=etuition
+SMTP2GO_PASSWORD=1Som9UaSR9KOYINc
+SMTP2GO_ENCRYPTION=tls
+
+# Email From Settings (customize these for your platform)
+MAIL_FROM_ADDRESS=etuition@uniti.edu.my
+MAIL_FROM_NAME="Online Tuition Platform"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
